--- a/iniciando-back-end/package.json
+++ b/iniciando-back-end/package.json
@@ -4,8 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "bcryptjs": "^2.4.3",
     "date-fns": "^2.13.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "pg": "^8.2.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.24",
@@ -19,6 +23,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/multer": "^1.4.3",
     "@typescript-eslint/eslint-plugin": "^2.32.0",
     "@typescript-eslint/parser": "^2.32.0",
     "eslint": "^7.0.0",
