--- a/iniciando-back-end/package.json
+++ b/iniciando-back-end/package.json
@@ -5,7 +5,9 @@
   "license": "MIT",
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.6",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "date-fns": "^2.13.0",
     "express": "^4.17.1",
     "express-async-error": "^0.0.2",
