--- a/appgobarber/package.json
+++ b/appgobarber/package.json
@@ -19,6 +19,7 @@
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
+    "react-native-vector-icons": "^7.0.0",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
@@ -28,6 +29,7 @@
     "@types/jest": "^26.0.8",
     "@types/react": "^16.9.44",
     "@types/react-native": "^0.63.3",
+    "@types/react-native-vector-icons": "^6.4.5",
     "@types/react-test-renderer": "^16.9.2",
     "@types/styled-components": "^5.1.2",
     "babel-jest": "^25.1.0",
