--- a/iniciando-back-end/.eslintrc.json
+++ b/iniciando-back-end/.eslintrc.json
@@ -16,9 +16,13 @@
         "sourceType": "module"
     },
     "plugins": [
-        "@typescript-eslint"
+        "@typescript-eslint",
+        "prettier"
     ],
     "rules": {},
+    "@typescript-eslint/interface-name-prefix": ["error", {
+        "prefixWithI": "always"
+    }],
     "settings": {
         "import/resolver": {
             "typescript": {}
