--- a/iniciando-back-end/ormconfig.json
+++ b/iniciando-back-end/ormconfig.json
@@ -6,12 +6,12 @@
     "password": "docker",
     "database": "postgres",
     "entities": [
-        "./src/models/*.ts"
+        "./src/modules/**/infra/typeorm/entities/*.ts"
     ],
     "migrations": [
-        "./src/database/migrations/*.ts"
+        "./src/shared/infra/typeorm/migrations/*.ts"
     ],
     "cli": {
-        "migratiosDir": "./src/database/migrations"
+        "migratiosDir": "./src/shared/infra/typeorm/migrations/"
     }
 }
