--- a/iniciando-back-end/package.json
+++ b/iniciando-back-end/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@types/express": "^4.17.6",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongodb": "^3.6.8",
     "@types/multer": "^1.4.3",
     "@types/nodemailer": "^6.4.0",
     "@typescript-eslint/eslint-plugin": "^2.32.0",
