Test: auth hook tests created

--- a/gobarber-web/package.json
+++ b/gobarber-web/package.json
@@ -59,7 +59,10 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^5.1.0",
     "@types/styled-components": "^5.1.0",
-    "@types/yup": "^0.29.3"
+    "@types/yup": "^0.29.3",
+    "axios-mock-adapter": "^1.19.0",
+    "react-test-renderer": "^17.0.1"
   }
 }
